[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/PMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/cowboy-saloon-western-retro-bar-empty-interior_107791-1778.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Tumbleweed_Menu.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Rye-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="PMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 508.108, 299.672 )
scale = Vector2( 1.63275, 1.91002 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="Label" parent="."]
margin_left = 8.0
margin_right = 1011.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
text = "Pick your poison
Who do you Kill"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -200.0
margin_right = 209.0
margin_bottom = -80.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KC" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Kill Cardino"

[node name="KA" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 114.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Kill Azure"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = -200.0
margin_right = 809.0
margin_bottom = -80.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="VBoxContainer2"]
margin_right = 109.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Quit" type="Button" parent="VBoxContainer2"]
margin_top = 31.0
margin_right = 109.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/KC" to="." method="_on_KC_pressed"]
[connection signal="pressed" from="VBoxContainer/KA" to="." method="_on_KA_pressed"]
[connection signal="pressed" from="VBoxContainer2/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
